k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-redux-svc
spec:
  selector:
    app: react-realword
  ports:
    - protocol: TCP
      port: 4100
      targetPort: 4100
